# aegis-yt-transcriber

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  transcribe  transcribe.ps1  yt2txt.py
.github/workflows/: test.yml
tests/: test_yt2txt.py
