[project]
name = "aegis-yt-transcriber"
version = "0.3.0"
description = "Turn a YouTube URL into a text transcript locally — even when captions are disabled."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "yt-dlp",
    # Cross-platform Whisper backend (Windows / Linux / Intel-Mac, CPU or CUDA GPU):
    "faster-whisper",
    # Apple-Silicon-only Metal backend — pip/uv installs it ONLY on arm64 macOS,
    # and silently skips it elsewhere (environment marker):
    "mlx-whisper; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
yt2txt = "yt2txt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["yt2txt.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# let `import yt2txt` resolve from the repo root without an editable install,
# so `pip install pytest && pytest` is enough in CI.
pythonpath = ["."]
